--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "build-no-errors": "tsc ; vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview --max-http-header-size=8192",
-    "types:supabase": "npx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/types/supabase.ts"
+    "types:supabase": "npx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/types/supabase.ts",
+    "docker:build": "docker build -t ai-nft-platform .",
+    "docker:run": "docker run -p 80:80 ai-nft-platform",
+    "deploy:staging": "npm run build && docker-compose -f docker-compose.staging.yml up -d",
+    "deploy:prod": "npm run build && docker-compose up -d",
+    "monitor": "docker-compose up monitoring grafana -d"
   },
   "dependencies": {
     "@cypress/request": "^3.0.0",
